@@ -1,4 +1,5 @@
 .qmake.internal.cache
+Makefile
 moc_*.cpp
 poa
 *.o
