@@ -1,6 +1,6 @@
 #############################################################################
 # Makefile for building: poa
-# Generated by qmake (1.03a) on: Thu Aug 21 16:11:52 2003
+# Generated by qmake (1.03a) on: Thu Aug 21 16:28:18 2003
 # Project:  poa.pro
 # Template: app
 # Command: $(QMAKE) poa.pro
@@ -12,8 +12,8 @@ CC       = gcc
 CXX      = g++
 LEX      = flex
 YACC     = yacc
-CFLAGS   = -pipe -Wall -W -I/usr/include/freetype2 -I/usr/include/freetype2/freetype -O2 -march=i386 -mcpu=i686 -fno-use-cxa-atexit -fno-exceptions  -DQT_NO_DEBUG
-CXXFLAGS = -pipe -Wall -W -I/usr/include/freetype2 -I/usr/include/freetype2/freetype -O2 -march=i386 -mcpu=i686 -fno-use-cxa-atexit -fno-exceptions  -DQT_NO_DEBUG
+CFLAGS   = -pipe -Wall -W -g  
+CXXFLAGS = -pipe -Wall -W -g  
 LEXFLAGS = 
 YACCFLAGS= -d
 INCPATH  = -I. -I$(QTDIR)/include -I$(QTDIR)/mkspecs/default
