@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: mdiwindow.h,v 1.9 2003/08/21 14:09:32 garbeam Exp $
+ * $Id: mdiwindow.h,v 1.10 2003/08/21 14:33:21 squig Exp $
  *
  *****************************************************************************/
 
@@ -49,6 +49,10 @@ public:
     void load( const QString& fn );
     void save();
     void saveAs();
+	double zoomLevel();
+
+public slots:
+	void setZoomLevel(double zoomLevel);
 
 protected:
     void closeEvent( QCloseEvent * );
@@ -56,6 +60,7 @@ protected:
 
 private:
     QCanvasView* view_;
+    double zoomLevel_;
 
 signals:
     void message(const QString&, int );
