@@ -19,9 +19,11 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 #
-# $Id: poa.pro,v 1.11 2003/08/21 14:24:41 garbeam Exp $
+# $Id: poa.pro,v 1.12 2003/08/21 14:33:21 squig Exp $
 #
 ###############################################################################
+
+CONFIG += debug
 
 TEMPLATE = app
 INCLUDEPATH += .
@@ -73,3 +75,4 @@ SOURCES += settings.cpp
 SOURCES += settingsdialog.cpp
 
 TARGET = poa
+
